--- a/package.json
+++ b/package.json
@@ -4,24 +4,49 @@
   "description": "yangsikdang",
   "main": "index.js",
   "engine": {
-    "node": "10.16.0",
-    "npm": "6.9.0"
+    "node": "14.15.4",
+    "npm": "6.14.10"
   },
   "scripts": {
-    "start": "node server/index.js",
-    "backend": "nodemon server/index.js"
+    "start": "nodemon index.js"
   },
   "author": "formlive-formdie",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/helmet": "^4.0.0",
+    "@types/hpp": "^0.2.1",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.21",
+    "@types/passport": "^1.0.5",
+    "@types/passport-local": "^1.0.33",
+    "@types/validator": "^13.1.3",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.4.20"
+    "express-session": "^1.17.1",
+    "helmet": "^4.3.1",
+    "hpp": "^0.2.3",
+    "mariadb": "^2.5.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "remove": "^0.1.5",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
