4-DB 설정 등 dev environment 설정 / ormconfig 파일을 json에서 ts파일로 변경. 컴파일 후 실행시 에러 생기는 문제 해결.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "npm": "6.14.10"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "startjs": "nodemon dist/index.js"
    },
    "author": "formlive-formdie",
    "license": "ISC",
