--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,17 @@
    "compilerOptions": {
       "lib": [
          "es5",
-         "es6"
+         "es6",
+         "es2016",
+         "es2017",
+         "es2018",
+         "es2019",
+         "es2020"
       ],
       "target": "es5",
-      "module": "commonjs",
+      "module": "CommonJS",
       "moduleResolution": "node",
-      "outDir": "./build",
+      "outDir": "./dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true
