5-회원가입 /회원가입API 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "target": "es5",
       "module": "CommonJS",
       "moduleResolution": "node",
+      "rootDir": "src",
       "outDir": "./dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
