--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
       "npm": "6.14.10"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "startjs": "nodemon dist/index.js"
+      "start": "tsc && node dist/index.js",
+      "tsnode": "ts-node src/index.ts"
    },
    "author": "formlive-formdie",
    "license": "ISC",
@@ -44,7 +44,7 @@
       "remove": "^0.1.5",
       "sequelize": "^6.3.5",
       "sequelize-cli": "^6.2.0",
-      "typeorm": "0.2.30",
+      "typeorm": "^0.2.30",
       "typescript": "^4.1.3"
    },
    "devDependencies": {
