8-회원탈퇴 /회원탈퇴API 1차 commit(delUser passport에 따라 수정 예정)

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
       "node": "14.15.4",
       "npm": "6.14.10"
    },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "startjs": "nodemon dist/index.js"
+   "scripts": { 
+      "start": "tsc && node dist/index.js",
+      "startjs": "nodemon dist/index.js",
+      "test": "ts-node src/index.ts"
    },
    "author": "formlive-formdie",
    "license": "ISC",
