--- a/ormconfig.js.example
+++ b/ormconfig.js.example
@@ -1,20 +1,20 @@
 const srcConfig = {
-   "type": "",
-   "host": "",
-   "port": 3306,
-   "username": "",
-   "password": "",
-   "database": "",
+   "type": "mysql, oracle 등 해당 DB이름을 입력해주시면 됩니다",
+   "host": "일반적으로 localhost",
+   "port": 3306, //mariaDB는 3307
+   "username": "디폴트는 root",
+   "password": "DB 비밀번호로 입력하시면 됩니다",
+   "database": "yangsikdang", //이건 확정.
    "synchronize": true,
    "logging": false,
    "entities": [
-      "src/entity/**/*.ts"
+      "src/entity/*.ts"
    ],
    "migrations": [
-      "src/migration/**/*.ts"
+      "src/migration/*.ts"
    ],
    "subscribers": [
-      "src/subscriber/**/*.ts"
+      "src/subscriber/*.ts"
    ],
    "cli": {
       "entitiesDir": "src/entity",
@@ -24,22 +24,22 @@ const srcConfig = {
 }
 
 const distConfig = {
-   "type": "",
-   "host": "",
-   "port": 3306,
-   "username": "",
-   "password": "",
-   "database": "",
+   "type": "mysql, oracle 등 해당 DB이름을 입력해주시면 됩니다",
+   "host": "일반적으로 localhost",
+   "port": 3306, //mariaDB는 3307
+   "username": "디폴트는 root",
+   "password": "DB 비밀번호로 입력하시면 됩니다",
+   "database": "yangsikdang", //이건 확정.
    "synchronize": true,
    "logging": false,
    "entities": [
-      "dist/entity/**/*.js"
+      "src/entity/*.ts"
    ],
    "migrations": [
-      "dist/migration/**/*.js"
+      "src/migration/*.ts"
    ],
    "subscribers": [
-      "dist/subscriber/**/*.js"
+      "src/subscriber/*.ts"
    ],
    "cli": {
       "entitiesDir": "dist/entity",
