--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "@types/helmet": "^4.0.0",
       "@types/hpp": "^0.2.1",
       "@types/morgan": "^1.9.2",
+      "@types/multer": "^1.4.5",
       "@types/passport": "^1.0.5",
       "@types/passport-local": "^1.0.33",
       "@types/validator": "^13.1.3",
@@ -36,6 +37,7 @@
       "hpp": "^0.2.3",
       "mariadb": "^2.5.2",
       "morgan": "^1.10.0",
+      "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "mysql2": "^2.2.5",
       "passport": "^0.4.1",
