--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       "outDir": "dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
+      "sourceMap": true,
+
+      "strictNullChecks": false,
+
    }
 }
