24-suggestions 불러오기 / 해당 기능 구현 완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,6 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
-
-      "strictNullChecks": false,
-
+      "strictNullChecks": false
    }
 }
