--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
       "npm": "6.14.10"
    },
    "scripts": {
-      "start": "tsc && node dist/index.js",
-      "tsnode": "ts-node src/index.ts"
+      "start": "tsc-watch --onSuccess \"node dist/index.js\""
    },
    "author": "formlive-formdie",
    "license": "ISC",
@@ -46,13 +45,12 @@
       "remove": "^0.1.5",
       "sequelize": "^6.3.5",
       "sequelize-cli": "^6.2.0",
+      "tsc-watch": "^4.2.9",
       "typeorm": "^0.2.30",
       "typescript": "^4.1.3"
    },
    "devDependencies": {
       "@types/node": "^14.14.21",
-      "nodemon": "^2.0.7",
-      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    }
 }
