--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "mysql2": "^2.2.5",
       "passport": "^0.4.1",
       "passport-local": "^1.0.0",
+      "passport-naver": "^1.0.6",
       "reflect-metadata": "^0.1.13",
       "remove": "^0.1.5",
       "sequelize": "^6.3.5",
@@ -51,6 +52,7 @@
    },
    "devDependencies": {
       "@types/node": "^14.14.21",
+      "@types/passport-naver": "^0.2.0",
       "typescript": "3.3.3333"
    }
 }
