--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "mysql": "^2.14.1",
       "mysql2": "^2.2.5",
       "passport": "^0.4.1",
+      "passport-google-oauth20": "^2.0.0",
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.13",
       "remove": "^0.1.5",
@@ -51,6 +52,7 @@
    },
    "devDependencies": {
       "@types/node": "^14.14.21",
+      "@types/passport-google-oauth20": "^2.0.6",
       "typescript": "3.3.3333"
    }
 }
