--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-COOKIE_SECRET=
-SERVER_URL=
-GOOGLE_CLIENTID=
-GOOGLE_SECRETID=
+COOKIE_SECRET=쿠키 SECRET
+SERVER_URL=https://~
+GOOGLE_CLIENTID=구글의 클라이언트KEY
+GOOGLE_SECRETID=구글의 SECRET
+KAKAO_CLIENTID=카카오의 RESTAPIKEY
