27- [TASK] Naver OAuth (1차 fin. 작동됨, redirectURL 최종본에서 바꿀 것)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SERVER_URL=https://~
 GOOGLE_CLIENTID=구글의 클라이언트KEY
 GOOGLE_SECRETID=구글의 SECRET
 KAKAO_CLIENTID=카카오의 RESTAPIKEY
+NAVER_CLIENTID=네이버의 클라이언트KEY
+NAVER_SECRETID=네이버의 SECRET
