43-deploy / import 정리 및 배포용으로 .env 설정

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 COOKIE_SECRET=쿠키 SECRET
-SERVER_URL=https://~
+SERVER_URL=https://yangsikdang.ml:5000
+CLIENT_URL=https://yangsikdang.ml
 GOOGLE_CLIENTID=구글의 클라이언트KEY
 GOOGLE_SECRETID=구글의 SECRET
 KAKAO_CLIENTID=카카오의 RESTAPIKEY
